--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -910,7 +910,7 @@ backdrop-filter: blur(8.4px);
 
     margin-bottom: 40px;
     margin-top: 20px;
-    pointer-events: none;
+    /* pointer-events: none; */
     text-align: center;
     color: var(--INFO);
 
@@ -1988,6 +1988,327 @@ backdrop-filter: blur(8.4px);
     margin-left: 15px;
   }
   
+
+
+
+
+
+
+
+/* admin dashboard panel */
+
+.admin__dashboard {
+    width: 100%;
+    position: relative;
+    
+    height: 100%;
+    max-height: 90vh;
+    border-radius: var(--BORDER-RADIUS);
+    display: grid;
+    grid-template: 1.4fr 3fr 2fr / repeat(7, 1fr);
+    gap: 20px;
+}
+
+.admin__dashboard .agency__names {
+    grid-area: 1 / 6 / -1 / -1;
+    width: 100%;
+    position: relative;
+    box-shadow: none;
+    overflow: auto;
+    padding-top: 0;
+}
+
+.admin__dashboard .debth__amount {
+    color: red;
+    display: flex;
+    align-items: center;
+    justify-content: right;
+    flex-grow: 1;
+    font-size: .8rem;
+    line-height: 1.2rem;
+    font-weight: 600;
+}
+
+.admin__dashboard .green {
+    color: green;
+}
+
+.admin__dashboard ion-icon {
+    margin-bottom: 5px;
+    padding-left: 4px;
+}
+
+.quantity__panel {
+    grid-area: 1 / 1 / 2 / 6;
+    display: grid;
+    grid-template: 1fr / 1fr 1fr 1fr 1fr;
+    gap: 15px;
+    justify-content: space-between;
+}
+
+.one__year__chart {
+    grid-area: 2 / 1 / 3 / 6;
+    border-radius: var(--BORDER-RADIUS);
+    box-shadow: var(--SHADOW3);
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    height: 300px;
+    width: 100%;
+    position: relative;
+}
+.profit__range{
+  width: 300px;
+  max-height: 30px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  padding-right: 20px;
+}
+.profit__range i:hover{
+  transform: scale(1.1);
+  color: var(--PRIMARY);
+}
+.doughnut{
+  width: 100%;
+  height: 100%;
+}
+.one__year__chart img{
+    height: 250px;
+}
+
+.pie__chart {
+    grid-area: 3 / 1 / -1 / 3;
+    border-radius: var(--BORDER-RADIUS);
+    box-shadow: var(--SHADOW3);
+    padding-bottom: 5px;
+
+}
+.pie__chart img{
+    max-height:150px;
+}
+.agency__names h5{
+  align-self: center;
+  font-size: 1.2rem;
+  font-weight: 700;
+}
+
+.profil__panel {
+    grid-area: 3 / 3 / -1 / 6;
+    border-radius: var(--BORDER-RADIUS);
+    box-shadow: var(--SHADOW3);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+      padding: 9px;
+
+
+}
+
+.profil__pan {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+
+}
+.profil__pan:hover{
+  transform: scale(1.1);
+  transition-duration: .5s ;
+}
+
+.profil__pan i {
+    font-size: 2.5rem;
+
+    background: rgb(69, 157, 122);
+    background: linear-gradient(60deg, rgba(69, 157, 122, 1) 10%, rgba(255, 201, 112, 1) 100%);
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    margin: 10px;
+}
+.profil__pan h2, .profil__pan h2 i{
+    background: rgb(3,7,51);
+    background: linear-gradient(60deg, rgba(3,7,51,0.9754026610644257) 0%, rgba(51,6,248,1) 100%);    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-size: 1.2rem;
+    line-height: 1.6rem;
+    font-weight: 800;
+}
+.profil__pan p{
+    font-weight: 300;
+    font-size: .9rem;
+    /* color:var(--PRIMARY); */
+}
+.quantity__container {
+    display: flex;
+    flex-direction: column;
+    box-shadow: var(--SHADOW3);
+    border-radius: var(--BORDER-RADIUS);
+    transition: .5s;
+}
+.quantity__container:hover{
+  transform: scale(1.1);
+  transition: .5s ease-in-out;
+  -webkit-transition: -webkit-transform 1s;
+  transition: transform .8s;
+
+}
+
+.quantity__top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 80%;
+}
+
+.quantity__icon {
+    flex-basis: 40%;
+    font-size: 45px;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    height: 100%;
+    padding: 10px;
+    color: var(--PRIMARY);
+}
+
+.quantity__icon .first__icon {
+    background: rgb(13, 120, 201);
+    background: linear-gradient(45deg, rgba(13, 120, 201, 1) 0%, rgba(112, 136, 155, 1) 100%, rgba(252, 176, 69, 1) 100%);
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.quantity__icon .second__icon {
+    background: rgb(2, 0, 36);
+    background: radial-gradient(circle, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 35%, rgba(0, 212, 255, 1) 100%);
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.quantity__icon .third__icon {
+    background: rgb(131, 58, 180);
+    background: linear-gradient(55deg, rgba(131, 58, 180, 1) 0%, rgba(253, 29, 29, 1) 0%, rgba(252, 176, 69, 1) 100%);
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.quantity__icon .fourth__icon {
+    background: rgb(69, 157, 122);
+    background: linear-gradient(60deg, rgba(69, 157, 122, 1) 10%, rgba(255, 201, 112, 1) 100%);
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.quantity__content {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 100%;
+    align-items: center;
+}
+
+.quantity__content h3 {
+    font-size: 28px;
+    font-weight: 800;
+    color: var(--FONT-COLOR);
+}
+
+.quantity__content p,
+.profit__percentage {
+    display: flex;
+    align-items: center;
+    font-size: 11px;
+    line-height: 18px;
+    /* color: red; */
+    text-align: center;
+    white-space: nowrap;
+    background: rgb(247, 31, 4);
+    background: linear-gradient(150deg, rgba(247, 31, 4, 1) 0%, rgba(105, 50, 29, 1) 100%);
+    font-weight: 700;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.quantity__content p.green,
+.profit__percentage.green {
+    background: rgb(54, 247, 4);
+    background: linear-gradient(150deg, rgba(54, 247, 4, 0.6140581232492996) 0%, rgba(39, 99, 4, 1) 100%);
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+
+}
+
+.quantity__bottom {
+    display: flex;
+    justify-content: flex-start;
+    padding-left: 10px;
+    opacity: .8;
+}
+
+.quantity__bottom h5 {
+    font-size: .9rem;
+    font-weight: 600;
+    background: rgb(95, 96, 99);
+    background: linear-gradient(45deg, rgba(95, 96, 99, 1) 0%, rgba(16, 27, 36, 1) 100%);
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.quantity__content h4 {
+    font-size: .9rem;
+    font-weight: 300;
+    /* color: var(--FF-COLOR2); */
+}
+.agency__pop__upper{
+  display: none;
+  height: 20px;
+  width: 200px;
+}
+.year__selector{
+    padding: 3px 7px;
+    background-color: var(--PRIMARY);
+    border: none;
+    outline: none;
+    color: white;
+    margin-right: 10px;
+    font-weight: 500;
+    border-radius: 5px;
+}
+
+
+
+
+
+
+
+
+
+
+
   /* ----------------------Invoice--------------------------- */
   
   .invoice__container [contenteditable] {
@@ -3378,6 +3699,16 @@ transform: scale(0.9, 0.9);
     flex-direction: row;
     justify-content: flex-start;
     padding: 8px 15px 8px 15px;
+    border-radius: 10px;
+    margin: 5px;
+    box-shadow: rgba(0,0,0,0.1) 0px 0px 5px 0px,rgba(0,0,0,0.1) 0px 0px 1px 0px;
+}
+.agency__name{
+    transition: .5s;
+}
+.agency__name:hover{
+    transition: 0.2s ease-in;
+    transform: scale(0.95);
 }
 .agency__names i{
     cursor: pointer;
@@ -4181,7 +4512,7 @@ transform: scale(0.9, 0.9);
     font-size: 13px;
 }
 
-.agency__names{
+.dealings .agency__names {
 
     z-index: -3;
 
@@ -4189,6 +4520,55 @@ transform: scale(0.9, 0.9);
     left: -200px;
 
 }
+.admin__dashboard {
+  grid-template: 1fr 2.5fr 1fr 1fr/ repeat(7, 1fr);
+
+}
+.quantity__panel{
+  grid-area: 1 / 1 / 2 / -1;
+}
+@keyframes fadeIn {
+  0% {
+      display: none;
+      opacity: 0;
+  }
+  100% {
+      display: block;
+      opacity: 1;
+  }
+}
+.admin__dashboard .agency__names{
+  width: 250px;
+  position: absolute;
+  bottom: 0;
+  display: none;
+  left: -120px;
+
+}
+.one__year__chart{
+  grid-area: 2 / 1 / 3 / -1;
+}
+.pie__chart{
+  grid-area: 3 / 1 / 6 / 4;
+}
+.profil__panel{
+  grid-area: 3 / 4 / -2 / -1 ;
+}
+.agency__pop__upper{
+  display: block;
+  grid-area: -2 / 5 / -1 / -1;
+  display: flex;
+  font-size: 2rem;
+  color: var(--PRIMARY);
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.agency__pop__upper i:hover{
+  color: indianred;
+  transition-duration: .5s;
+    }
+
 
 .deals{
 
@@ -4298,6 +4678,11 @@ transform: scale(0.9, 0.9);
 
         grid-template: 1fr /1fr;
     }
+
+    .quantity__panel{
+        grid-template: 1fr 1fr / 1fr 1fr;
+      }
+  
  
 }
 
@@ -4359,6 +4744,19 @@ transform: scale(0.9, 0.9);
 
     font-size: 10px;
 }
+
+.quantity__panel{
+    grid-template: 1fr 1fr 1fr 1fr / 1fr;
+  }
+  .admin__dashboard{
+    overflow-y: auto;
+  }
+  .pie__chart{
+    grid-area: -3 / 1 / -2 / -1;
+  }
+  .profil__panel{
+    grid-area: -2 / 1 / -1 / -1;
+  }
 
 }
 
